# raw_ml_lib

./: README.md  pyproject.toml
src/: base.py  distance_functions.py  entropy.py
src/supervised_models/: decision_tree.py  knn.py  naive_bayes.py
tests/: conftest.py  test_base.py  test_distance_functions.py  test_entropy.py
tests/supervised_models/: test_decision_tree.py  test_knn.py  test_naive_bayes.py
